Added login activity

--- a/templates/strings.xml
+++ b/templates/strings.xml
@@ -3,4 +3,9 @@
     <string name="home">Home</string>
     <string name="navigation_drawer_open">Open</string>
     <string name="navigation_drawer_close">Close</string>
+
+        <!--Login related-->
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
